--- a/index.html
+++ b/index.html
@@ -64,6 +64,6 @@
         </div>
       </main>
     </div>
-    <script src="/src/controllers/script.mjs" type="module"></script>
+    <script src="src/controllers/script.mjs" type="module"></script>
   </body>
 </html>
